# MutualXperience

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci_backend.yaml
Backend/: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: e20664b2a19a_inital_revision.py
Backend/app/: logger.py  main.py
Backend/app/api/routes/: __init__.py
Backend/app/core/: config.py  db.py  security.py
Backend/app/core/helper/: dates_and_time.py
Backend/app/database/: db_init.py  session.py
Backend/app/database/models/: __init__.py  mixins.py  user_models.py
Backend/scripts/: format.sh  initial_setup.sh  test.sh
